--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -70,3 +70,12 @@ button:focus-visible {
   }
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type=number] {
+  -moz-appearance: textfield;
+}
